# ftp

./: Cargo.toml  README.md
src/: main.rs
src/certs/: cert.pem  key.pem
src/client/: init.rs  utils.rs
src/common/: utils.rs
src/packet/: structure.rs
src/server/: handlers.rs  init.rs  mod.rs  utils.rs
src/server/static/: uploads.html
