[package]
name = "FTP"
version = "0.1.0"
edition = "2021"
authors = ["Nimish Mohan M"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xxhash-rust = {version = "0.8.5", features=["xxh64", "xxh3"]}
bincode = "1.3.3"
serde = { version = "1.0", features = ["derive"] }
clap = { version = "3.2", features = ["derive"] }
flate3 = "0.1.21"
libaes = "0.6.2"
axum = {version = "0.5.7", features = ["multipart"]}
axum-server = {version = "0.4.0", features = ["tls-rustls"]}
tokio = { version = "1.19.2", features = ["fs", "rt-multi-thread"] }
tower-http = { version = "0.3.0", features = ["fs"] }